<?xml version="1.0" encoding="utf-8"?>
<resources>

        <string name="app_name">Gradenator</string>
        <string name="grade_service_update_name">Grade Update</string>
    <string name="crash_toast_text">Gradenator has crashed. An email has been sent to the
        developer.</string>

    <!--ActionBar Strings-->
    <string name="ab_classes">Classes</string>
    <string name="ab_overview">Overview</string>
    <string name="ab_all_terms">All Terms</string>
    <string name="ab_assignments">Assignments</string>
    <string name="ab_graph">Graph</string>
    <string name="ab_grade_calc">Grade Calculator</string>

    <!--Intro Fragment Strings-->
    <string name="intro_header">Welcome to Gradenator!</string>
    <string name="intro_msg">Press the button above to start tracking your grades!</string>
    <string name="intro_new_term">Start!</string>

    <!--View Term Fragment Strings-->
    <string name="term_header">All Terms</string>

    <!-- View Term Dialog Strings-->
    <string name="edit_term_title">Edit Term</string>
    <string name="create_term_title">Create New Term</string>
    <string name="term_title_hint">Autumn 2013</string>
    <string name="create_term">Create Term</string>
    <string name="save_edit">Save Edit</string>
    <string name="term_success_msg">term created!</string>
    <string name="term_edited_msg">term edited!</string>
    <string name="remove_term_title">Remove Term</string>
    <string name="confirm_msg_1">Are you sure you want to remove the term</string>
    <string name="confirm_msg_2">from your term list?</string>
    <string name="successfully_deleted">has been successfully deleted!</string>
    <string name="empty_term_error_msg">Please specify a term name.</string>
    <string name="dup_term_title">Duplicate term</string>
    <string name="dup_term_msg">There exists a term with the same name. Please rename this term </string>
    <string name="no_terms_msg">There are no terms on record.\nPress the add button below
        to make a new term!</string>

    <!--Term Card Strings-->
    <string name="classes_single">class</string>
    <string name="classes_multiple">classes</string>
    <string name="units_single">unit</string>
    <string name="units_multiple">units</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <!--View Class Fragment Strings-->
    <string name="class_header">All Classes</string>
    <string name="class_name">className</string>
    <string name="unit_count">unitCount</string>
    <string name="all_categories">allCategories</string>
    <string name="adapter">adapter</string>

    <!--Class Overview Fragment Strings-->
    <string name="no_assignments">No Assignments</string>
    <string name="assignments">Assignments</string>

    <!--Add, Edit, and Remove Class Fragment Strings-->
    <string name="create_class_header">Create a new class</string>
    <string name="create_class_btn">Create Class</string>
    <string name="create_class_name_header">Class Name: </string>
    <string name="create_class_name_hint">Math 308</string>
    <string name="create_class_unit_header">Units: </string>
    <string name="create_class_unit_hint">3</string>
    <string name="category_title">Categories</string>
    <string name="category_msg">All category weights must total to 100.</string>
    <string name="category_add">Add Category</string>
    <string name="category_error">You need at least one category.</string>
    <string name="category_remove">Remove Category</string>
    <string name="category_name_hint">Homework</string>
    <string name="category_weight_hint">20</string>
    <string name="class_created_msg_1">The class </string>
    <string name="class_created_msg_2">has been successfully created!</string>
    <string name="empty_field_title">Empty Field</string>
    <string name="no_class_name">Please specify a class name.</string>
    <string name="no_unit_count">Please specify how many units this class is.</string>
    <string name="no_category_field">One or more of your categories is incomplete.
        Please complete all of your categories.</string>
    <string name="no_total_one_hundred_title">Weights do not equal 100</string>
    <string name="no_total_one_hundred">The sum of your weights from each of your
        categories does not total 100. Please change your weights and try again.</string>
    <string name="duplicate_category_title">Duplicate Categories</string>
    <string name="duplicate_category_msg">You have two categories that have the same name.
        Please change one of your categories.</string>
    <string name="duplicate_class_title">Duplicate Class</string>
    <string name="duplicate_class_msg">You have two classes that have the same name.
        Please change the title of your class.</string>
    <string name="class_title_too_long_title">Class Name Too Long</string>
    <string name="class_title_too_long_msg">Your class name is too long. Please shorten your
        class name to 10 characters.</string>
    <string name="edit_class_title">Edit Class</string>
    <string name="class_success_updated">Your class has been successfully updated!</string>
    <string name="update_class_btn">Update Class</string>
    <string name="remove_class_title">Remove Class</string>
    <string name="remove_class_msg_1">Are you sure you want to remove</string>
    <string name="remove_class_msg_2">from your class list?</string>
    <string name="no_classes_msg">You have no classes for this term.\nPress the add button below
    to record a new class!</string>

    <!--ViewSingleClass Fragment Strings-->
    <string name="total_percentage">Total %</string>
    <string name="weight_percentage">% weight</string>  <!--Used for constructing display header-->
    <string name="all_assignments">Assignments</string>
    <string name="filter">Filter: </string>

    <!--Create, Edit, and Remove Assignment Strings-->
    <string name="create_assignment_header">Create New Assignment</string>
    <string name="edit_assignment_header">Edit Existing Assignment</string>
    <string name="assignment_title_header">Title:</string>
    <string name="assignment_title_hint">Hamlet Quiz</string>
    <string name="earned_points_header">Earned Points:</string>
    <string name="earned_points_hint">9.5</string>
    <string name="max_points_header">Max Points:</string>
    <string name="max_points_hint">10</string>
    <string name="category_header">Category:</string>
    <string name="select_prompt">Select...</string>
    <string name="empty_field_error_msg">One or more of the required fields is incomplete.
        Please fill them out and try again.</string>
    <string name="points_invalid_format_title">Invalid Number Formatting</string>
    <string name="points_invalid_format_msg">Your numbers that you have entered are in an
        invalid format. Please modify your numbers and try again.</string>
    <string name="assignment_success_msg">Assignment successfully created!</string>
    <string name="duplicate_title_header">Duplicate Assignment Titles</string>
    <string name="duplicate_title_msg">It appears that the title you have chosen already
        exists. Please edit your title and try again.</string>
    <string name="zero_out_of_zero_title">Undefined Score</string>
    <string name="zero_out_of_zero_msg">You cannot have 0 out of 0 as a score for an
        assignment. Please change one of the fields and try again.</string>
    <string name="too_many_digits">Too many digits</string>
    <string name="too_many_digits_msg">There are too many digits for your earned score or
        max score. Please modify your entries and try again.</string>
    <string name="card_text_out_of">/</string>
    <string name="assignment_success_edit_msg">Assignment successfully edited!</string>
    <string name="confirm_edit_msg">Confirm Changes</string>
    <string name="remove_assignment">Remove Assignment</string>
    <string name="remove_assignment_1">Are you sure you want to remove</string>
    <string name="remove_assignment_2">from your class list?</string>
    <string name="remove_assignment_button">Remove Assignment</string>
    <string name="remove_assignment_success">has been successfully removed!</string>
    <string name="no_assignments_msg">There are no assignments on record.\nPress the add button
        below to add a new assignment!</string>

    <!--Graph-->
    <string name="graph_title_msg">Percentage vs Time</string>
    <string name="no_data_msg">There is not enough data to graph your progress yet. Check
        back in about a week!</string>

    <!--Grade Update Notifications-->
    <string name="grade_update_title">Grades Updated</string>
    <string name="grade_update_text">Your grades have been recorded!</string>

    <!--Min Grade Calculations-->
    <string name="min_grade_header">Hypothetical Grade Calculator</string>
    <string name="which_category_msg">Which category is this assignment going in?</string>
    <string name="percentage_maintain_msg">% Goal:</string>
    <string name="percentage_hint">95.3</string>
    <string name="maximum_points_msg">Max Points:</string>
    <string name="maximum_points_hint">50</string>
    <string name="calculate">Calculate!</string>
    <string name="min_grade_msg_part_1">You need</string>
    <string name="min_grade_msg_part_2">points to hit your goal %.</string>
    <string name="empty_fields_msg_min_grade">Please enter the overall % you would like to
        obtain/maintain and the maximum amount of points this future assignment will be
        worth.</string>
</resources>
