<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">
    <TextView
        android:id="@+id/class_title"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/create_class_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/class_title_edit"
        android:layout_alignTop="@+id/class_title_edit"/>

    <EditText
        style="@style/EditText.Gradenator"
        android:layout_width="wrap_content"
        android:gravity="right"
        android:id="@+id/class_title_edit"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|text"
        android:hint="@string/create_class_name_hint"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/class_title"/>

    <TextView
        android:textSize="20sp"
        android:id="@+id/unit_count_title"
        android:text="@string/create_class_unit_header"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:layout_below="@+id/class_title_edit"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/class_title"
        android:layout_alignEnd="@+id/class_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        style="@style/EditText.Gradenator"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:id="@+id/unit_count_edit"
        android:layout_width="wrap_content"
        android:hint="@string/create_class_unit_hint"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_below="@+id/class_title_edit"
        android:layout_alignRight="@+id/class_title_edit"
        android:layout_alignEnd="@+id/class_title_edit"
        android:layout_alignLeft="@+id/class_title_edit"
        android:layout_alignStart="@+id/class_title_edit"/>

    <TextView
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/green_medium"
        android:text="@string/category_title"
        android:padding="20dp"
        android:id="@+id/category_header"
        android:layout_width="match_parent"
        android:layout_below="@+id/unit_count_edit"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center"
        android:layout_marginTop="3dp"
        android:textSize="16sp"
        android:id="@+id/category_msg"
        android:text="@string/category_msg"
        android:layout_below="@+id/category_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/all_categories"
        android:layout_below="@id/category_msg"
        android:layout_width="match_parent"
        android:layout_above="@+id/add_category"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/add_category"
        android:text="@string/category_add"
        android:textColor="@color/white"
        android:layout_above="@+id/remove_category"
        android:background="@color/card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/all_categories"
        android:layout_alignEnd="@+id/all_categories"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/remove_category"
        android:layout_alignParentBottom="true"
        android:text="@string/category_remove"
        android:background="@color/card_text"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/add_category"
        android:layout_alignEnd="@+id/add_category"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>